Expression closures modified, added Diagram validation of objects, before rework to EqualityPivot and HashMultiset<EqualityPivot> inputs